testdata/baselines/reference/compiler/tluaConstEnumSyntaxUnsupported.errors.txt
tluaConstEnumSyntaxUnsupported.tlua(1,12): error TS1005: ';' expected.
tluaConstEnumSyntaxUnsupported.tlua(1,12): error TS2304: Cannot find name 'E'.
tluaConstEnumSyntaxUnsupported.tlua(2,5): error TS2304: Cannot find name 'A'.
tluaConstEnumSyntaxUnsupported.tlua(2,5): error TS2695: Left side of comma operator is unused and has no side effects.
tluaConstEnumSyntaxUnsupported.tlua(3,1): error TS1109: Expression expected.


==== tluaConstEnumSyntaxUnsupported.tlua (5 errors) ====
    local enum E {
               ~
!!! error TS1005: ';' expected.
               ~
!!! error TS2304: Cannot find name 'E'.
        A,
        ~
!!! error TS2304: Cannot find name 'A'.
        ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    }
    ~
!!! error TS1109: Expression expected.
    